# rust-actix-boilerplate

./: .env-example  .env.example  .gitignore  Cargo.toml  LICENSE  Readme.md  diesel.toml
.docker/: Dockerfile  docker-compose.yaml
.docker/env/: .app.env.example  .db.env.example
.github/workflows/: build.yml  clippy.yml
.postman/: Rust boilerplate environment.postman_environment.json  Rust boilerplate.postman_collection.json
cmd/server/: main.rs
config/: Cargo.toml  config.rs  logger.rs
dependencies/: Cargo.toml
dependencies/src/: lib.rs
internal/: Cargo.toml  internal.rs
internal/container/: container.rs
internal/filesystem/: image_storage_service.rs  mod.rs
internal/infra/: mod.rs
internal/infra/database/: migration.rs  mod.rs  session_repository.rs  user_repository.rs
internal/infra/database/migrations/2024-09-21-122416_create_user_table/: up.sql
internal/infra/database/migrations/2024-09-28-082214_create_sessions_table/: up.sql
internal/infra/database/schemas/: users.rs
internal/infra/domain/: session.rs  user.rs
internal/infra/http/: mod.rs  routes.rs  server.rs
internal/infra/http/controllers/: auth_controller.rs  mod.rs  user_controller.rs
internal/infra/http/middlewares/: auth_middleware.rs  is_owner_middleware.rs  mod.rs  path_object_middleware.rs
internal/infra/http/requests/: error.rs  mod.rs  user_request.rs
internal/infra/http/resources/: mod.rs  user_resource.rs
internal/service/: user_service.rs
internal/services/: auth_service.rs  mod.rs  user_service.rs
