[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[lib]
name = "internal"
path = "internal.rs"

[dependencies]
config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = { version = "2.2.0" }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = { version = "8.1" }
uuid = { version = "1.2", features = ["v4", "serde"] }
pwhash = "1"
serde_json = "1.0"
rand = "0.8" 
thiserror = "1.0"
actix-web = "4"
actix-cors = "0.7.0"