[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[lib]
name = "internal"
path = "internal.rs"

[dependencies]
config = { path = "../config" }

# Validation
validator = { version = "0.18.1", features = ["derive"] }
futures = "0.3"
mime = "0.3"

# Actix
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-files = "0.6"
jsonwebtoken = { version = "8.1" }

thiserror = "2.0.7"


# Json serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_qs = { version = "0.13", features = ["actix4"] }
serde_urlencoded = "0.7"
serde_json = "1.0"

# Diesel
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
chrono = { version = "0.4.38", features = ["serde"] }

# Rust commons
rust-commons = { git = "ssh://git@github.com/serhio-sys/rust-commons.git", branch = "main" }